@@ -5,6 +5,7 @@ from mcs_raw_binary import RawMCSFile
 from hdf5 import H5File
 from kwd import KwdFile
 from openephys import OpenEphysFile
+from nwb import NWBFile
 
 try:
 	import nixio
@@ -18,13 +19,13 @@ try:
 except ImportError:
 	HAVE_NEUROSHARE = False
 
-
 __supported_data_files__ = {
 	RawBinaryFile._description : RawBinaryFile,
 	RawMCSFile._description : RawMCSFile,
 	H5File._description : H5File,
 	OpenEphysFile._description : OpenEphysFile,
-	KwdFile._description : KwdFile
+	KwdFile._description : KwdFile,
+	NWBFile._description : NWBFile
 }
 
 #if HAVE_NIX_SUPPORT:
@@ -34,3 +35,5 @@ __supported_data_files__ = {
 if HAVE_NEUROSHARE:
 	from mcd import MCDFile
 	__supported_data_files__[MCDFile._description] = MCDFile
+
+
